{{$NEXT}}

 - Still referenced ACLs must not be deleted even if name has -DRC- .
 - Again allow comment '#' as header of JSON for NSX.

3.021     2024-02-14 18:01:57+01:00 Europe/Berlin

 - Migrated approve for IOS from Perl to Go.
   - Order of rules inside blocks of successive permit/deny rules
     is ignored during compare.
   - Unused ACLs with name ending in -DRC-<NUM> are removed.
   - Changed timeout of reload command from 5 to 2 minutes.
   - Option '-u' of command drc3.pl is implemented for all device types.
 - Removed support for Cisco NX-OS.
 - Removed support for EZVPN at Cisco devices.
 - "tunnel-group-map default-group" referencing predefined
   tunnel-group like DefaultL2LGroup is no longer silently ignored on device,
   but removed instead.
 - No longer ignore duplicate access-group command in raw files,
   but abort instead.
 - No longer ignore header in JSON config for NSX.

3.020     2023-11-13 11:21:42+01:00 Europe/Berlin

 - Fixed issues in code for ASA:
   - Order of two adjacent ACL lines accidentally was swapped if first
     line was moved and second one was inserted.
   - An inserted or deleted ACL entry accidentally used a decremented
     line number if a leading ACL entry was already moved.
   - Timeout message is ignored if device is unreachable and
     'diamonds compare' was called with parameter '--brief'.

3.019     2023-10-26 15:16:42+02:00 Europe/Berlin

 - Use sequence number from 65535 downwards for crypto map dynamic in
   code for ASA. This matches the behaviour of the previous Perl version.

3.018     2023-10-23 15:38:38+02:00 Europe/Berlin

 - Bug fix in migrated code for ASA.
   The bug could occur in this situation:
   Two rules on device reference the same object-group A. These rules
   are changed to reference two different object-groups B and C.  In
   this case the original object-group A may get changed to values of
   both B and C.

3.017     2023-10-18 13:42:00+02:00 Europe/Berlin
