@@ -1,6 +1,7 @@
 {{$NEXT}}
 
  - Still referenced ACLs must not be deleted even if name has -DRC- .
+ - Referenced but unknown ACL is silently ignored for IOS.
  - Again allow comment '#' as header of JSON for NSX.
 
 3.021     2024-02-14 18:01:57+01:00 Europe/Berlin
